--- a/Homework8/Lesson8/style.scss
+++ b/Homework8/Lesson8/style.scss
@@ -1,4 +1,51 @@
+$width-site: 1200px;
+$color-block: #777;
+$border-width: 1px;
+$border: $border-width solid $color-block;
+
 *{
     margin: 0;
     padding: 0;
+}
+
+.header{
+    height: 100px;
+    background-color: $color-block;
+    width: $width-site;
+    margin: 0 auto;
+}
+
+.menu{
+    width: $width-site;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    &__list{
+        list-style-type: none;
+    }
+    &__link{
+        text-decoration: none;
+        display: block;
+        padding: 16px 32px;
+    }
+}
+
+.content{
+    padding: 50px 0;
+    width: $width-site;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    &__item{
+        width: $width-site / 3 - 2 * $border-width;
+        height: 250px;
+        border: $border-width solid #000;
+    }
+}
+
+.footer{
+    height: 100px;
+    background-color: $color-block - #222;
+    width: width-site;
+    margin: 0 auto;
 }
