--- a/Homework8/style.scss
+++ b/Homework8/style.scss
@@ -105,10 +105,7 @@
       letter-spacing: 0.05em;
       color: #5A98D0;
       text-decoration: none;
-    }
-    .project{    
-      
-    }
+    }    
     .project__parent{
       display: flex;
       justify-content: space-between;
@@ -160,10 +157,9 @@
     .footer_parent{    
       display: flex;
       flex-grow: 1;
-      justify-content: space-between;
-      
+      justify-content: space-between;      
       padding: 91px 113px;
-    }  
+    }
     .footer_item{
       max-width: 500px;
       align-self: center;
@@ -204,8 +200,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
-      padding: 64px;
-      
+      padding: 64px;      
     }
     .footer_rights{
       padding: 0px 113px 64px;
@@ -256,6 +251,34 @@
       }
       .card{
         margin-bottom: 32px;
+      }
+      .footer_parent{    
+        display: flex;
+        flex-grow: 1;
+        justify-content: space-between;      
+        padding: 47px 124px 64px;
+      }
+      .footer_heading{
+        max-width: 336px;
+      }
+      .footer_item{
+        max-width: 336px;
+      }
+      .footer_item_margin{
+        margin-right: 51px;
+      }
+      .footer__button{
+        white-space: nowrap;        
+        padding: 3px 30px 10px;        
+      }
+      .list{    
+        display: flex;
+        flex-direction: column;        
+        justify-content: space-around;
+        padding: 64px 124px;
+      }
+      .list_item_margin{
+        margin-bottom: 25px;
       }
     }
     @media(max-width: 667px){
@@ -322,5 +345,42 @@
       .project__item_margin{
         margin-right: 0;
         margin-bottom: 16px;
+      }
+      .footer{
+        margin-top: 64px;
+      }
+      .footer_parent{    
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+        justify-content: space-between;      
+        padding: 18px 16px 40px;
+      }
+      .footer_item{
+        text-align: center;
+      }
+      .footer_heading{
+        font-size: 24px;
+        line-height: 28px;
+        max-width: 345px;
+      }
+      .footer_item_margin{
+        margin-bottom: 40px;
+        margin-right: 0;
+        max-width: 345px;
+      }
+      .footer__button{
+        white-space: nowrap;
+        padding: 0 18px; 
+      }
+      .list{    
+        display: flex;
+        flex-direction: column;        
+        justify-content: space-around;
+        padding: 32px 56px 37px;
+      }
+      .footer_rights{
+        padding: 0px 15px 32px;
+        text-align: center;
       }
     }
